--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
     "initial_parameters": 1,
     "initial_threads": "900",
-    "initial_packets": "9",
-    "initial_binary": "megoxer",
+    "initial_packets": "8",
+    "initial_binary": "Spike",
     "max_attack_time": 240,
-    "attack_cooldown": 300,
+    "attack_cooldown": 30,
     "cost_per_attack": 5
 }
